--- a/_posts/2015-05-04-projects-3.md
+++ b/_posts/2015-05-04-projects-3.md
@@ -2,7 +2,7 @@
 layout: default
 img: bbugks.png
 category: Services
-title: Blackberry-User-Group Kassel
+title: BlackBerry-User-Group Kassel
 description: |
 ---
-Ich bin bekennender Fan der Smartphones von BlackBerry. Ich habe mich der [BlackBerry-User-Group Kassel](http://bbugks.de/) angeschlossen und kümmere mich um die technische Betreuung des Webauftritts und betreibe dort mit meinem Lieblingsblogsystem die Webseite der Gruppe.
+Ich bin bekennender Fan der Smartphones von BlackBerry. Ich bin Mitglied der [BlackBerry-User-Group Kassel](http://bbugks.de/) und kümmere mich um die technische Betreuung des Webauftritts. Wir betreiben dort mit meinem Lieblingsblogsystem die Webseite der Gruppe.
