--- a/_posts/2015-05-02-projects-1.md
+++ b/_posts/2015-05-02-projects-1.md
@@ -5,4 +5,4 @@ category: Services
 title: Hommel-Net Weblog
 description: |
 ---
-Wie schon unter "Über mich" erwähnt, ist mein Blog der Dreh- und Angelpunkt meiner Webaktivitäten. Der Blog (ersatzweise "das Blog") wird betrieben mit [Serendipity](http://s9y.org/), der besten Blogengine der Welt ;-).Hier gibt es immer mal wieder etwas zu lesen, sei es aus dem Berufs- oder Privatleben oder auch mal technische Themen. [Einfach mal reinschauen.](http://blog.hommel-net.de/)
+Wie schon unter "Über mich" erwähnt, ist mein Blog der Dreh- und Angelpunkt meiner Webaktivitäten. Der Blog (ersatzweise "das Blog") wird betrieben mit [Serendipity](http://s9y.org/), der besten Blogengine der Welt <i class="fa fa-smile-o"></i>. Hier gibt es immer mal wieder etwas zu lesen, sei es aus dem Berufs- oder Privatleben oder auch mal über technische Themen. [Einfach mal reinschauen.](http://blog.hommel-net.de/)
